--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,6 @@ jobs:
   test:
     runs-on: macOS-13
     steps:
-      name: Test
-      run: |
-        csrutil status
+      - name: Test
+        run: |
+          csrutil status
